[package]
name = "brs_iso_bevy12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = "0.1"
rfd = "0.13.0"
dirs = "5.0"
lazy_static = "1.4"
bevy_editor_pls = "0.7"
bevy_embedded_assets = "0.9"
winit = "0.28"
rayon = "1.5.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[dependencies.bevy]
version = "0.12"
default-features = true
features = [
    "wav",  # Audio: Uncompressed WAV
    # "dynamic_linking", # Dynamic linking for faster compile-times (remove before release)
]
