[package]
name = "brs_iso_bevy12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = { git = "https://github.com/brickadia-community/brickadia-rs" }
brdb = { git = "https://github.com/brickadia-community/brdb" }
rfd = "0.13"
dirs = "5.0"
lazy_static = "1.4"
bevy_embedded_assets = "0.16"
winit = "0.30"
rayon = "1.5"
bevy_egui = "0.41"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[dependencies.bevy]
version = "0.19"
default-features = true
features = [
    "wav",  # Audio: Uncompressed WAV
    "experimental_pbr_pcss",  # Soft shadows (PCSS) to hide shadow-map texel aliasing
    # "dynamic_linking", # Dynamic linking for faster compile-times (remove before release)
]
